# deriv_interp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  bpoly_test.cpp  bspoly_test.cpp  compare_from_derivatives.cpp  cpoly_test.cpp  hpoly_test.cpp  lagpoly_test.cpp  legpoly_test.cpp  pyproject.toml  test_utils.h
include/: bpoly.h  bspoly.h  cpoly.h  extrapolate_mode.h  hpoly.h  lagpoly.h  legpoly.h  ndarray.h  poly_base.h
scripts/: bspoly_property_reference.json  bspoly_reference_data.json  compare_from_derivatives.py  cpoly_reference_data.json  from_derivatives_comparison.json  generate_test_data.py  generate_test_values.py  get_exact_values.py  lagpoly_reference_data.json  live_verify.py  lpoly_property_reference.json  lpoly_reference_data.json  test_data.json  verify_bspoly_values.py  verify_cpoly_values.py  verify_cpp_values.py  verify_hpoly_values.py  verify_lagpoly_values.py  verify_legpoly_values.py
src/: bindings.cpp  mixed_poly_list.h  poly_list.h
tests/: test_bindings.py
