[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=1.9"]
build-backend = "scikit_build_core.build"

[project]
name = "deriv_poly"
version = "0.1.0"
description = "Piecewise polynomial interpolation: BPoly, CPoly, LegPoly, BsPoly, LagPoly with vectorized evaluation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nen Huynh"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
test = ["pytest", "scipy"]

[tool.scikit-build]
wheel.packages = []
cmake.build-type = "Release"
cmake.args = ["-DBUILD_PYTHON=ON"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"
